--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         {
             background-size: contain;
             background-attachment: fixed;
-            background-image: url('Images/GemStone.png');
             width: 98%;
             height: 98%;
             position: relative;
@@ -99,7 +98,11 @@
         </a>
 
         <a onclick="window.open('https://www.facebook.com/PicenoPropertyServicesLLC/')">
-            <img class="landing_logo" src="Images/Instagram.png" alt="Portrait" style="cursor: pointer; -webkit-user-drag: none; width: 2%; height: 2%; margin-right: 3%;">
+            <img class="landing_logo" src="Images/Facebook.png" alt="Portrait" style="cursor: pointer; -webkit-user-drag: none; width: 2%; height: 2%; margin-right: 3%;">
+        </a>
+        
+        <a onclick="window.open('https://www.youtube.com/@picenopropertyservices')">
+            <img class="landing_logo" src="Images/YouTube.png" alt="Portrait" style="cursor: pointer; -webkit-user-drag: none; width: 2%; height: 2%; margin-right: 3%;">
         </a>
 
         <a href="mailto:picenopropertyservices@gmail.com">
@@ -110,7 +113,7 @@
 
         <div class="about_me" style="width: 90%;">
 
-            <p style="font-size: 2.1vw; color: rgb(255, 255, 255);">Hello there, thanks for stopping by and checking us out. Feel free to explore our previous work and or find our contact information!</p>
+            <p style="font-size: 2.1vw; color: rgb(255, 255, 255);">Hello there, thanks for stopping by and checking our webpage out. Feel free to explore our previous work and or find our contact information!</p>
         
         </div>
 
