--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"">
     <script src="Buttons.js"></script>
-    <title>My Portfolio</title>
-    <link rel="icon" type="image/png" href="Images/Doubloon.png">
+    <title>Piceno Property Services</title>
+    <link rel="icon" type="image/png" href="Images/Logo_Main.png">
 </head>
 <body>
     <style>
