--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         
         <!--Quotes Start-->
 
-        <section class="Projects" id="Projects" style="width: 90%; display: none;">
+        <section class="Quotes" id="Quotes" style="width: 90%; display: none;">
             <div>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Schedule Your Quote</p>
             </div>
