--- a/index.html
+++ b/index.html
@@ -275,8 +275,9 @@
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
                 <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Logo">
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
                 <hr>
 
             </div>
