--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 
                 <!--Fall Services Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Winter Services</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Fall Services</p>
                 <hr>
 
                 <div>
@@ -240,6 +240,7 @@
                     <div style="clear: both;"></div>
                 </div>
 
+                <hr>
                 <!--Winter Services End>
                 
             </div>
