--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
 
                 <hr>
-                <!--Winter Services End>
+                <!--Winter Services End-->
                 
             </div>
         </section>
