--- a/index.html
+++ b/index.html
@@ -280,8 +280,8 @@
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
-                <img style="width: 10%; height: 10%;" src="Images/Main_Logo.png" alt="Our Logo">
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Established 2024</p>
+                <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Our Logo">
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Established: 2024</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
                 <p style="font-size: 2.4vw; color: rgb(255, 255, 255);">We are a company that was founded with the intention of providing quality work to residential and commerical customers!.</p>
                 <hr>
