--- a/index.html
+++ b/index.html
@@ -329,9 +329,19 @@
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Business License</p>
-                <img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo">
-                <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
-                <img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo">
+                
+                <div>
+                    <img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo">
+                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
+                    <img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo">
+                </div>
+
+                <div>
+                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">A</p>
+                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
+                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">B</p>
+                </div>
+               
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">ID #: 605 456 394</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Issuer: WA Dept. of Revenue + WA Secretary of State</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Issued: March 2024</p>
