--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Business License</p>
                 
-                <div style="display: flex;">
+                <div style="display: flex; align-items: center;">
                     <img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo">
                     <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
                     <img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo">
                 </div>
 
-                <div style="display: flex;">
+                <div style="display: flex; align-items: center;">
                     <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">A</p>
                     <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
                     <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">B</p>
