--- a/index.html
+++ b/index.html
@@ -330,16 +330,12 @@
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Business License</p>
                 
-                <div style="display: flex; align-items: center;">
-                    <img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo">
-                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
-                    <img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo">
-                </div>
-
-                <div style="display: flex; align-items: center;">
-                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">A</p>
-                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p>
-                    <p style="font-size: 4.8vw; color: rgb(255, 255, 255);">B</p>
+                <div style="display: flex;">
+                    <tr>
+                    <td><img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo"></td>
+                    <td><p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p></td>
+                    <td><img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo"></td>
+                    </tr>
                 </div>
                
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">ID #: 605 456 394</p>
