--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                         
                     <tr>
                         <td><img style="width: 10%; height: 10%;" src="Images/WA_DeptOfRev.png" alt="WA Dep of Rev Logo"></td>
-                        <td><p style="font-size: 4.8vw; color: rgb(255, 255, 255);">+</p></td>
+                        <td><img style="width: 10%; height: 10%;" src="Images/Plus.png" alt="Plus Logo"></td>
                         <td><img style="width: 10%; height: 10%;" src="Images/WA_SOS.png" alt="WA SoS Logo"></td>
                     </tr>
                     
