--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Our Logo">
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Established: 2024</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
-                <p style="font-size: 2.4vw; color: rgb(255, 255, 255);">We are a company that was founded with the intention of providing quality work to residential and commerical customers!.</p>
+                <p style="font-size: 2.4vw; color: rgb(255, 255, 255);">We are a company that was founded with the intention of providing quality work to residential and commerical customers!. We offer Yakima property services year-round. Our services include general property maintenance services such as landscaping, junk removal, snow clearing, and many other services, ensuring a beautiful and well-maintained property throughout the year.</p>
                 <hr>
 
             </div>
