--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>Piceno Property Services</title>
     <link rel="icon" type="image/png" href="Images/Logo_Main.png">
 </head>
-scroll_default()
-<body>
+<body onload="scroll_default()">
     <style>
 
         .title{
