--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
         
         <!--Quotes Start-->
 
-        <section class="Contact" id="Contact" style="width: 80%; display: none;">
+        <section class="Quotes" id="Quotes" style="width: 80%; display: none;">
             <div>
 
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Get Your Quote</p>
