--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <section class="Services" id="Services" style="width: 95%; display: none;">
             <div>
 
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Services We Offer</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Services We Offer</b>
 
                 <!--Landscaping Start-->
                 <hr>
@@ -161,7 +161,7 @@
 
                 <!--Construction Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Construction Services</p>
+                <b style="font-size: 2.8vw; color: rgb(255, 255, 255);">Construction Services</b>
                 <hr>
 
                 <div>
@@ -251,7 +251,7 @@
         <section class="About" id="About" style="width: 95%; display: none;">
             <div>
 
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">About Us</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">About Us</b>
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
@@ -271,7 +271,7 @@
         <section class="Contact" id="Contact" style="width: 95%; display: none;">
             <div>
 
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Our Contact Information</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Our Contact Information</b>
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
@@ -291,7 +291,7 @@
         <section class="Licenses" id="Licenses" style="width: 95%; display: none;">
             <div>
 
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Our Licenses</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Our Licenses</b>
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">General Contractors License</p>
@@ -322,7 +322,7 @@
 
         <section class="Projects" id="Projects" style="width: 95%; display: none;">
             <div>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Our Current and Previous Projects</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Our Current and Previous Projects</b>
             </div>
 
             <!--Project 1 Start-->
@@ -347,7 +347,7 @@
         <section class="Quotes" id="Quotes" style="width: 95%; display: none;">
             <div>
 
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Get Your Quote</p>
+                <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Get Your Quote</b>
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
