--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
                 <!--Landscaping Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Landscaping Services</p>
+                <h style="font-size: 2.8vw; color: rgb(255, 255, 255);">Landscaping Services</h>
                 <hr>
 
                 <div>
@@ -161,7 +161,7 @@
 
                 <!--Construction Start-->
                 <hr>
-                <b style="font-size: 2.8vw; color: rgb(255, 255, 255);">Construction Services</b>
+                <h style="font-size: 2.8vw; color: rgb(255, 255, 255);">Construction Services</h>
                 <hr>
 
                 <div>
@@ -184,7 +184,7 @@
 
                 <!--Fall Services Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Fall Services</p>
+                <h style="font-size: 2.8vw; color: rgb(255, 255, 255);">Fall Services</h>
                 <hr>
 
                 <div>
@@ -204,7 +204,7 @@
                 
                 <!--Winter Services Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Winter Services</p>
+                <h style="font-size: 2.8vw; color: rgb(255, 255, 255);">Winter Services</h>
                 <hr>
 
                 <div>
@@ -224,7 +224,7 @@
 
                 <!--Misc Services Start-->
                 <hr>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Other Services</p>
+                <h style="font-size: 2.8vw; color: rgb(255, 255, 255);">Other Services</h>
                 <hr>
 
                 <div>
