--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
         <div class="about_me" style="width: 90%;">
 
-            <p style="font-size: 2.1vw; color: rgb(255, 255, 255);">Hello there, thanks for stopping by and checking our webpage out. Feel free to explore our previous work and or find our contact information!</p>
+            <p style="font-size: 2.1vw; color: rgb(255, 255, 255);">Hello there and thanks for stopping by and checking out our webpage. Feel free to explore our previous work, schedule a quote, and or find our contact information!</p>
         
         </div>
 
