--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             <hr>
             <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Yard Work - Residential</p>
             
-            <img style="width: 34%; height: 34%;" src="Images/IMG_5051.PNG" alt="WA Dep of Rev Logo">
+            <img style="width: 55%; height: 55%;" src="Images/IMG_5051.PNG" alt="Residentail Yard Work">
             
             <p style="font-size: 2.6vw; color: rgb(255, 255, 255);">This is a project that we had done this spring in which we performed removal of an overgrown weed issue behind a residential shed.</p>
             <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Date(s) Worked On: 5/15/24</p>
