--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Piceno Property Services</title>
     <link rel="icon" type="image/png" href="Images/Logo_Main.png">
 </head>
-<body onload="scroll_default()">
+<body>
     <style>
 
         .title{
