--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         </div>
         
-        <img class="landing_logo" src="Images/Design_5_Light.png" alt="Portrait" style="-webkit-user-drag: none; width: 20%; height: 20%; margin-right: 1%;">
+        <img class="landing_logo" src="Images/Design_5_Light.svg" alt="Portrait" style="-webkit-user-drag: none; width: 20%; height: 20%; margin-right: 1%;">
 
         <hr>
 
