--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         
         </div>
         
-        <img class="landing_logo" src="Images/Design_5_Light.svg" alt="Portrait" style="-webkit-user-drag: none; width: 40%; height: 40%; margin-right: 1%;">
+        <img class="landing_logo" src="Images/Design_5_Light.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 40%; height: 40%; margin-right: 1%;">
 
         <hr>
 
@@ -276,7 +276,7 @@
 
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
-                <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Logo">
+                <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Piceno Property Services">
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
