--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"">
     <script src="Buttons.js"></script>
     <script src="Page_Scroll.js"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5218752850641498"
+     crossorigin="anonymous"></script>
     <title>Piceno Property Services</title>
     <link rel="icon" type="image/png" href="Images/Logo_Main.png">
 </head>
