--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      crossorigin="anonymous"></script>
     <title>Piceno Property Services</title>
     <link rel="icon" type="image/png" href="Images/Logo_Main.png">
+    <link rel="apple-touch-icon" type="image/png" sizes="167x167" href="Images/Logo_Main.png"> 
 </head>
 <body>
     <style>
