--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                 <button class="Button_Projects" onclick="myFunction('Services')" style="cursor: pointer; font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Our Services</button>
                 <button class="Button_Projects" onclick="myFunction('About')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">About Us</button>
                 <button class="Button_Projects" onclick="myFunction('Licenses')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Licenses</button>
-                <button class="Button_Projects" onclick="myFunction('Projects')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Projects</button>
-                <button class="Button_Projects" onclick="myFunction('Quotes')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Free Quote</button>
+                <button class="Button_Projects" onclick="myFunction('Projects')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; margin-top:1%; width: 24%; height: 20%;">Projects</button>
+                <button class="Button_Projects" onclick="myFunction('Quotes')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Get Your Quote</button>
                 <button class="Button_Projects" onclick="myFunction('Contact')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; width: 24%; height: 20%;">Our Contact</button>
             
             </div>
