--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
             text-align: center;
         }
 
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: rgb(105, 83, 17);
+            color: white;
+            text-align: center;
+        }
+        
         .intro{
             border-right: 5px solid;
             width: 36%;
@@ -365,6 +375,12 @@
         </section>
 
         <!--Quotes End-->
+
+        <!--Footer Start-->
+        <div class="footer">
+            <p>Footer</p>
+        </div>
+        <!--Footer End-->
         
     </div>
 </body>
