--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
         }
 
         .footer {
-            position: relative;
+            position: absolute;
             left: 0;
-            bottom: 100%;
+            bottom: 0;
             width: 100%;
             background-color: rgb(105, 83, 17);
             color: white;
