--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
         }
 
         .footer {
-            position: absolute;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-            background-color: rgb(105, 83, 17);
-            color: white;
-            text-align: center;
+            text-align:center;
+            position: relative;
+            left: 100px;
+            height: 200px;
+            width: 500px;
+            background-color: green;
         }
         
         .intro{
