--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         .footer {
             text-align:center;
             position: relative;
-            left: 100px;
-            height: 200px;
-            width: 500px;
-            background-color: green;
+            margin-top: -100%
+            height: 5%;
+            width: 100%;
+            background-color: 209, 169, 23;
         }
         
         .intro{
