--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             margin-top: 100%
             height: 5%;
             width: 100%;
-            background-color: 209, 169, 23;
+            background-color: rgb(209, 169, 23);
         }
         
         .intro{
