--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         .footer {
             text-align:center;
-            position: relative;
+            position: absolute;
             margin-top: -100%
             height: 45%;
             width: 100%;
