--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 
         .footer {
             text-align:center;
-            position: absolute;
-            margin-top: -100%
+            position: relative;
+            background-position: 50% 0;
+            background-position-y: bottom;
             height: 45%;
             width: 100%;
             background-color: rgb(209, 169, 23);
