--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
         .footer {
             text-align:center;
             position: relative;
-            background-position: 50% 0;
-            background-position-y: bottom;
+            bottom: 0;
             height: 45%;
             width: 100%;
             background-color: rgb(209, 169, 23);
