--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
         }
 
         .footer {
-            text-align:center;
+            text-align: center;
             position: relative;
-            bottom: 0;
             height: 45%;
             width: 100%;
             background-color: rgb(209, 169, 23);
+            margin-top: -400px;
         }
         
         .intro{
