--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         .footer {
             text-align: center;
             position: relative;
+            display: flex;
+            flex-wrap: wrap;
             height: 45%;
             width: 100%;
             background-color: rgb(209, 169, 23);
