--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             height: 45%;
             width: 100%;
             background-color: rgb(209, 169, 23);
-            margin-top: 100%;
+            margin-top: 0;
         }
         
         .intro{
