--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
 
         .footer {
             text-align: center;
-            position: relative;
-            display: flex;
-            flex-wrap: wrap;
-            height: 45%;
+            position: fixed;
+            height: 10%;
             width: 100%;
             background-color: rgb(209, 169, 23);
             margin-top: 0;
