--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
         .footer {
             text-align: center;
-            position: fixed;
+            position: relative;
             height: 10%;
             width: 100%;
             background-color: rgb(209, 169, 23);
