--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             -webkit-background-size: contain;
             -moz-background-size: contain;
             -o-background-size: contain;
-            margin-bottom: 100%;
+            margin-bottom: 0;
         }
 
         .Button_Projects{
@@ -67,7 +67,7 @@
             height: 10%;
             width: 100%;
             background-color: rgb(209, 169, 23);
-            margin-top: 0;
+            margin-top: 10%;
         }
         
         .intro{
