--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             text-align: center;
             position: relative;
             height: 10%;
+            left: 50%
             width: 100%;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
