--- a/index.html
+++ b/index.html
@@ -63,9 +63,8 @@
 
         .footer {
             text-align: center;
-            position: relative;
-            height: 10%;
-            left: 50%
+            position: absolute;
+            height: 40%;
             width: 100%;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
