--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             text-align: center;
             position: absolute;
             height: 20%;
-            width: 130%;
+            width: 100%;
+            left: 0;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
         }
