--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
 
         .footer {
             text-align: center;
-            position: absolute;
+            position: relative;
             height: 20%;
             width: 100%;
-            left: 0;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
         }
