--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
         body 
         {
+            align-items: center;
             background-size: contain;
             background-attachment: fixed;
             width: 100%;
