--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             align-items: center;
             background-size: contain;
             background-attachment: fixed;
-            width: 98%;
+            width: 100%;
             height: 100%;
             position: relative;
             background-repeat: no-repeat;
@@ -46,6 +46,7 @@
             -moz-background-size: contain;
             -o-background-size: contain;
             margin-bottom: 0;
+            overflow-x: hidden;
         }
 
         .Button_Projects{
