--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         body 
         {
             align-items: center;
+            justify-content: center;
             background-size: contain;
             background-attachment: fixed;
             width: 100%;
