--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             justify-content: center;
             background-size: contain;
             background-attachment: fixed;
+            padding-right: 0%;
             width: 100%;
             height: 100%;
             position: relative;
