--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
             width: 100%;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
+            overflow-x: hidden;
         }
         
         .intro{
@@ -81,6 +82,7 @@
             animation: 
             typing 2s, 
             cursor .4s step-end infinite alternate;
+            overflow-x: hidden;
         }
 
         .intro_anim{
@@ -127,7 +129,7 @@
 
         <hr>
 
-        <div class="about_me" style="width: 90%;">
+        <div class="about_me" style="width: 90%; overflow-x: hidden;">
 
             <p style="font-size: 2.6vw; color: rgb(255, 255, 255);">Hello there and thanks for stopping by and checking out our webpage. Feel free to explore our previous work, schedule a quote, and or find our contact information!</p>
         
