--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         body 
         {
-            width: 100%;
+            width: 99%;
             height: 100%;
             position: relative;
             background-color: rgb(0, 0, 0);
@@ -120,6 +120,12 @@
         <section style="width: 98%;" class="buttons">
             <div class="button_container">
 
+                <button class="Button_Projects" onclick="myFunction('Services')" style="cursor: pointer; font-size: 1.8vw; vertical-align: middle;margin-top:1%;  width: 24%; height: 20%;">Our Services</button>
+                <button class="Button_Projects" onclick="myFunction('About')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle;margin-top:1%;  width: 24%; height: 20%;">About Us</button>
+                <button class="Button_Projects" onclick="myFunction('Licenses')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; margin-top:1%; width: 24%; height: 20%;">Licenses</button>
+                <button class="Button_Projects" onclick="myFunction('Projects')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; margin-top:1%; width: 24%; height: 20%;">Projects</button>
+                <button class="Button_Projects" onclick="myFunction('Quotes')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; margin-top:1%; width: 24%; height: 20%;">Get Your Quote</button>
+                <button class="Button_Projects" onclick="myFunction('Contact')" style="cursor: pointer;  font-size: 1.8vw; vertical-align: middle; margin-top:1%; width: 24%; height: 20%;">Our Contact</button>
             
             </div>
        
