--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             -webkit-background-size: contain;
             -moz-background-size: contain;
             -o-background-size: contain;
-            overflow-y: scroll;
+            overflow-y: hidden;
             overflow-x: hidden;
         }
 
