--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         
         </div>
 
-        <section style="width: 98%;" class="buttons">
+        <section style="width: 98%; overflow-x: hidden;" class="buttons">
             <div class="button_container">
 
                 <button class="Button_Projects" onclick="myFunction('Services')" style="cursor: pointer; font-size: 1.8vw; vertical-align: middle;margin-top:1%;  width: 24%; height: 20%;">Our Services</button>
@@ -128,7 +128,7 @@
        
         </section>
 
-        <section class="Services" id="Services" style="width: 95%; display: none;">
+        <section class="Services" id="Services" style="width: 95%; display: none; overflow-x: hidden;">
             <div>
 
                 <b style="font-size: 3.4vw; color: rgb(255, 255, 255);">Services We Offer</b>
