--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <hr>
 
-        <div class="about_me" style="width: 90%; overflow-x: hidden;">
+        <div class="about_me" style="width: 90%;">
 
             <p style="font-size: 2.6vw; color: rgb(255, 255, 255);">Hello there and thanks for stopping by and checking out our webpage. Feel free to explore our previous work, schedule a quote, and or find our contact information!</p>
         
