--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
     </div>
     
     <!--Footer Start-->
-    <div class="footer">
+    <div class="footer" style="display: none;">
         <p>Footer</p>
     </div>
     <!--Footer End-->
