--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
         }
 
         .footer {
+            text-align: center;
+            position: absolute;
+            height: 20%;
+            width: 100%;
+            background-color: rgb(209, 169, 23);
+            margin-top: 10%;
+            overflow-x: hidden;
         }
         
         .intro{
@@ -359,7 +366,7 @@
     </div>
     
     <!--Footer Start-->
-    <div class="footer" style="display: none;">
+    <div class="footer">
         <p>Footer</p>
     </div>
     <!--Footer End-->
