--- a/index.html
+++ b/index.html
@@ -49,12 +49,10 @@
 
         .footer {
             text-align: center;
-            position: absolute;
+            position: relative;
             height: 20%;
-            width: 100%;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
-            overflow-x: hidden;
         }
         
         .intro{
