--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             text-align: center;
             position: relative;
             height: 20%;
+            width: auto;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
         }
