--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         body 
         {
             background-color: rgb(34, 66, 60);
+            width: auto;
             -webkit-background-size: contain;
             -moz-background-size: contain;
             -o-background-size: contain;
-            overflow-x: hidden;
         }
 
         .Button_Projects{
