--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         body 
         {
             background-color: rgb(34, 66, 60);
-            width: auto;
+            width: 100%;
             -webkit-background-size: contain;
             -moz-background-size: contain;
             -o-background-size: contain;
@@ -50,8 +50,8 @@
         .footer {
             text-align: center;
             position: relative;
-            height: 20%;
             width: auto;
+            height: 20%;
             background-color: rgb(209, 169, 23);
             margin-top: 10%;
         }
@@ -366,7 +366,7 @@
     
     <!--Footer Start (Place Logo on left)-->
     <div class="footer">
-        <p>Piceno Property Services LLC</p>
+        <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
     </div>
     <!--Footer End-->
     
