--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         body 
         {
             background-color: rgb(34, 66, 60);
-            width: 100%;
+            width: auto;
         }
 
         .Button_Projects{
