--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         body 
         {
             background-color: rgb(34, 66, 60);
+            overflow-y: scroll;
         }
 
         .Button_Projects{
@@ -54,14 +55,12 @@
         }
         
         .intro{
-            border-right: 5px solid;
+            border-right: 1.5% solid;
             width: 36%;
             white-space: nowrap;
-            overflow: hidden;
             animation: 
             typing 2s, 
             cursor .4s step-end infinite alternate;
-            overflow-x: hidden;
         }
 
         .intro_anim{
