--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 
         .footer {
             text-align: center;
-            position: relative;
+            position: absolute;
             width: auto;
             height: 35%;
+            bottom: 0;
             background-color: rgb(209, 169, 23);
         }
         
