--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         .footer {
             text-align: center;
             position: absolute;
-            width: auto;
+            width: 100%;
             height: 35%;
             bottom: 0;
             background-color: rgb(209, 169, 23);
