--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
             height: 35%;
             bottom: 0;
             background-color: rgb(209, 169, 23);
+            top-margin: 10%
         }
         
         .intro{
