--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
             position: fixed;
+            width: 100%
         }
 
         .Button_Projects{
