--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         {
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
-            position: fixed;
+            position: relative;
             width: 100%
         }
 
