--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         {
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
-            position: relative;
             width: 100%
         }
 
@@ -49,11 +48,11 @@
         .footer {
             text-align: center;
             position: absolute;
-            width: 100%;
+            width: auto;
             height: 35%;
             bottom: 0;
             background-color: rgb(209, 169, 23);
-            top-margin: 10%
+            top-margin: 20%
         }
         
         .intro{
