--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         {
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
-            width: 100%
         }
 
         .Button_Projects{
@@ -47,7 +46,7 @@
 
         .footer {
             text-align: center;
-            position: absolute;
+            position: relative;
             width: auto;
             height: 35%;
             bottom: 0;
