--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         {
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
+            height: 100vh;
         }
 
         .Button_Projects{
