--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             background-color: rgb(34, 66, 60);
             overflow-y: scroll;
             height: 100vh;
+            width: 100vw;
         }
 
         .Button_Projects{
