--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             position: relative;
             width: auto;
             height: 35%;
+            overflow: auto!important;
+            max-height: 100% !important;
             bottom: 0;
             background-color: rgb(209, 169, 23);
             top-margin: 20%
