--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
             position: relative;
             width: auto;
             height: 35%;
-            overflow: auto!important;
-            max-height: 100% !important;
-            bottom: 0;
+            right: 0;
+            bottom: 0 !important;
+            left: 0;
             background-color: rgb(209, 169, 23);
-            top-margin: 20%
+            top-margin: 20%;
         }
 
     </style>
