--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     </style>
     
-    <div class="container" align="center">  
+    <div class="container" align="center" style="margin-bottom: 100%;">  
 
         <div class="intro_anim" id="title">
           
