--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
             bottom: 0 !important;
             left: 0;
             background-color: rgb(209, 169, 23);
+            margin-top: 100%
         }
 
     </style>
     
-    <div class="container" align="center" style="margin-bottom: 100%;">  
+    <div class="container" align="center"">  
 
         <div class="intro_anim" id="title">
           
