--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             bottom: 0 !important;
             left: 0;
             background-color: rgb(209, 169, 23);
-            margin-top: 100%
+            margin-top: 100%;
         }
 
     </style>
