--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
         }
 
         .Button_Projects{
-            padding-right: 0%;
             color: #ffffff;
             background-color: rgba(119, 20, 20, 0);
             border-color: #ffffff;
             border-radius: 1%;
             text-align: center;
-            position: relative;
         }
 
         .Button_Text_Alignment{
@@ -55,6 +53,8 @@
             left: 0;
             background-color: rgb(209, 169, 23);
             margin-top: 100%;
+            float: none;
+            display: inline-block;
         }
 
     </style>
