--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     
     <!--Footer Start (Place Logo on left)-->
     <div class="footer">
-        <p style="font-size: 2.8vw; color: rgb(0, 0, 0);">Piceno Property Services LLC</p>
+        <img class="footer_logo" src="Images/Design_5_Light.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 9%; height: 9%">
     </div>
     <!--Footer End-->
     
