--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
     
     <!--Footer Start (Place Logo on left)-->
     <div class="footer">
-        <img class="footer_logo" src="Images/Design_5_Light.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 90%; height: 90%; float: left;">
+        <img class="footer_logo" src="Images/Design_5_Light.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 90%; height: 90%; float: left; display: inline-flex;">
         <p style="font-size: 1.4vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
         <p style="font-size: 1.4vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
     </div>
