--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
     
     <!--Footer Start (Place Logo on left)-->
     <div class="footer">
-        <img class="footer_logo" src="Images/Design_5_Dark.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 90%; height: 90%;.">
+        <img class="footer_logo" src="Images/Design_5_Light.svg" alt="Piceno Property Services" style="-webkit-user-drag: none; width: 90%; height: 90%;.">
     </div>
     <!--Footer End-->
     
