--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             bottom: 0 !important;
             background-color: rgb(19, 38, 35);
             margin-top: 100vh;
+            text-align: center;
         }
 
     </style>
@@ -342,9 +343,9 @@
     
     <!--Footer Start (Place Logo on left)-->
     <div class="footer">
-        <p style="font-size: 1.4vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
-        <p style="font-size: 1.4vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
-        <p style="font-size: 1.4vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
+        <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
+        <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
+        <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
     </div>
     <!--Footer End-->
     
