--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             background-color: rgb(19, 38, 35);
             margin-top: 100vh;
             text-align: center;
+            align-items: center;
         }
 
     </style>
