--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Piceno Property Services LLC</p>
                 <img style="width: 10%; height: 10%;" src="Images/Logo_Main.png" alt="Logo">
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Call, Text, or Message us to get your free quote!</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Call, Text, or Email us to get your free quote!</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Phone: (209) 270-0695</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Email: picenopropertyservices@gmail.com</p>
                 <hr>
