--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="Images/favicon-16x16.png">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="mask-icon" type="image/svg" href="Images/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="canonical" href="https://picenopropertyservices.com"/>
 </head>
 <body>
     <style>
