--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      crossorigin="anonymous"></script>
     <title>Piceno Property Services</title>
     <meta property="og:title" content="Piceno Property Services" />
+    <meta property="og:site_name" content="Piceno Property Services" />
     <meta name="keywords" content="Piceno Property Services">
     <meta name="author" content="Piceno Property Services">
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="Images/apple-touch-icon.png">
