--- a/index.html
+++ b/index.html
@@ -283,9 +283,9 @@
                 <hr>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">General Contractors License</p>
                 <img style="width: 10%; height: 10%;" src="Images/LaborIndustries.png" alt="LI Logo">
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">ID #: 000000</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">ID #: N/A</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Issuer: Labor & Industries, Washington State</p>
-                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Issued: August 2024</p>
+                <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Issued: N/A</p>
                 <p style="font-size: 2.8vw; color: rgb(255, 255, 255);">Location: Yakima, WA, United States</p>
                 <hr>
 
